<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">星座运势大全</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world！</string>
    <string name="constellation_title">星座运势</string>
    <string name="do_testing_title">测试</string>
    <string-array name="tabStrs">
        <item >今日</item>
        <item >明日</item>
        <item >本周</item>
        <item >本月</item>
        <item >本年</item>
    </string-array>
    <string-array name="ch_constellation">
        <item >白羊座</item>
        <item >金牛座</item>
        <item >双子座</item>
        <item >巨蟹座</item>
        <item >狮子座</item>
        <item >处女座</item>
        <item >天秤座</item>
        <item >天蝎座</item>
        <item >射手座</item>
        <item >摩羯座</item>
        <item >水瓶座</item>
        <item >双鱼座</item>
    </string-array>
    <string-array name="main_menu">
        <item >星闻</item>
        <item >运势</item>
        <item >测试</item>
        <item >个人信息</item>
    </string-array>
	<string name="user_name">用户名：</string>
    <string name="user_password">密   码：</string>
    <string name="login">输入您的账号密码开始新的路程</string>
    <string name="find_password">找回密码</string>
    <string name="phone_register">注册</string>
    <string name="weixin_login">微信登录</string>
    <string name="other_login">其他方式登录</string>
    <string name="loginBtn">登   录</string>
    <string name="title_activity_main">这里是程序的主页面</string>
    <string name="email">邮   箱：</string>
    <string name="user_contact"><u>用户协议</u></string>
</resources>
